0x0A-python-inheritance/tests/7-base_geometry.txt
>>> class BaseGeometry:
... def area(self):
  File "<stdin>", line 2
    def area(self):
    ^
IndentationError: expected an indented block
>>> raise Exception("area() is not implemented")
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
Exception: area() is not implemented
>>> def integer_validator(self, name, value):
... if type(value) is not int:
  File "<stdin>", line 2
    if type(value) is not int:
    ^
IndentationError: expected an indented block
>>> raise TypeError('{} must be an integer'.format(name))
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'name' is not defined
>>>  if value <= 0:
  File "<stdin>", line 1
    if value <= 0:
    ^
IndentationError: unexpected indent
>>> raise ValueError('{} must be greater than 0'.format(name))
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'name' is not defined
